<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_road"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical">


    <Chronometer
        android:id="@+id/now_score_road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E91E63"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.099" />

    <TableLayout
        android:layout_width="360dp"
        android:layout_height="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/road1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/road5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/road9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road10"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road11"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road12"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/road13"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road14"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road15"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/road16"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_regame_road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_regame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_road"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <Button
        android:id="@+id/button_save_road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="@+id/button_regame_road"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_regame_road"
        app:layout_constraintTop_toTopOf="@+id/button_regame_road"
        app:layout_constraintVertical_bias="0.904" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <Chronometer
        android:id="@+id/best_road"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/best_score"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_road_best"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

</androidx.constraintlayout.widget.ConstraintLayout>